# rust-safari

./: .gitignore  README.md
RustOnAzure/: Cargo.toml  README.md  host.json
RustOnAzure/src/: main.rs
boxes/: Cargo.toml
boxes/src/: main.rs  ui.rs
compose_in_rust/: Cargo.toml
compose_in_rust/src/: main.rs
gen_css_modules_type/: Cargo.toml
gen_css_modules_type/src/: lib.rs  main.rs
hello-actix/: Cargo.toml  load-test.js
hello-actix/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
play_with_mongo/: Cargo.toml
play_with_mongo/src/: main.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/tests/: web.rs
wasm-game-of-life/www/: index.html  index.js
weather-cli/src/: main.rs
