[package]
name = "gen_css_modules_type"
version = "0.1.0"
authors = ["klcantrell <cantrellkalalau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.3"
notify = "5.0.0-pre.2"
unicode-segmentation = "1.3.0"
