[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.162", features = ["derive"] }
time = { version = "0.3", features = ["macros", "serde", "formatting"] }
rand = { version = "0.8.5" }
